# pyplayready

./: README.md  pyproject.toml  requirements.txt  serve.example.yml
pyplayready/: __init__.py  cdm.py  main.py
pyplayready/crypto/: __init__.py  ecc_key.py  elgamal.py  key_wrap.py
pyplayready/device/: __init__.py
pyplayready/license/: key.py  license.py  xml_key.py  xmrlicense.py
pyplayready/misc/: drmresults.py  exceptions.py  revocation_list.py  soap_message.py  storage.py
pyplayready/remote/: remotecdm.py  serve.py
pyplayready/system/: bcert.py  builder.py  pssh.py  session.py  wrmheader.py
